# opus-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  rustfmt.toml
.github/workflows/: ci.yml  python-wheels.yml
benches/: vs_libopus.rs
docs/: encoder-future-work.md  unsafe.md
docs/python/: api.rst  conf.py  index.rst
examples/: decode_throughput.rs  enc_bench.rs  encode_check.rs  encoder_quality.rs  fec_check.rs  loss_check.rs  rate_check.rs  silk_check.rs  surround_check.rs
examples/python/: 01_encode_decode.py  02_ogg_file.py  03_packet_loss.py  04_modes_and_config.py  05_multistream.py  06_lowlevel_silk_lpc.py  README.md
manual/: The Opus Audio Codec - Theory and Implementation.tex  build.sh  manual.tex  python_guide.tex  references.bib
src/: decoder.rs  encoder.rs  encoder_analysis.rs  experimental.rs  lib.rs  multistream.rs  packet.rs  prof.rs  simd.rs
src/celt/: bands.rs  cwrs.rs  decoder.rs  encoder.rs  energy.rs  laplace.rs  mdct.rs  mod.rs  modes.rs  pitch.rs  plc.rs  rate.rs  tables.rs  vq.rs  vq_simd.rs
src/ogg/: crc.rs  mod.rs  opus.rs  page.rs
src/python/: decoder.rs  encoder.rs  enums.rs  errors.rs  mod.rs  multistream.rs  numpy_io.rs  ogg.rs  packet.rs
src/range/: decoder.rs  encoder.rs  mod.rs
src/silk/: api.rs  decoder.rs  gains.rs  indices.rs  lpc.rs  math.rs  mod.rs  nlsf.rs  params.rs  pitch.rs  plc.rs  pulses.rs  resampler.rs  stereo.rs  tables.rs
tests/: conformance.rs  ogg.rs  packet.rs  range_coder.rs
tests/fixtures/: sine_mono.opus  surround_51.opus
tools/: bench_python.py  build_python.py
(+24 files in other folders)
